# DenAuth

./: Cargo.toml  README.md  postman_collection.json
migrations/: 20241127141437_users.down.sql  20241127141437_users.up.sql
src/: db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs
src/handler/: auth.rs  users.rs
src/mail/: mails.rs  mod.rs  sendmail.rs
src/mail/templates/: RestPassword-email.html  Welcome-email.html
src/utils/: password.rs  token.rs
